force-app/main/default/objects/Distribution_Log__c/Distribution_Log__c.object-meta.xml
<CustomObject>
    <description>A timestamped record of what record what assigned to whom</description>
    <label>Distribution Log</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Distribution Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Distribution Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>