force-app/main/default/objects/Distribution_Log__c/fields/Assigned_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Record_Id__c</fullName>
    <description>Id of record that was distributed</description>
    <inlineHelpText>Id of record that was distributed</inlineHelpText>
    <label>Assigned Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>