force-app/main/default/objects/Distribution_Log__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Individual who was assigned the record</description>
    <inlineHelpText>Individual who was assigned the record</inlineHelpText>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Distribution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>