force-app/main/default/objects/Distribution_Log__c/fields/Distribution_Rule__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Rule__c</fullName>
    <description>Distribution Rule that this assignment followed</description>
    <inlineHelpText>Distribution Rule that this assignment followed</inlineHelpText>
    <label>Distribution Rule</label>
    <referenceTo>Distribution_Rule__c</referenceTo>
    <relationshipLabel>Distribution Logs</relationshipLabel>
    <relationshipName>Distribution_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>