force-app/main/default/objects/Distribution_Log__c/fields/Distribution_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Timestamp__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distribution Timestamp</label>
    <type>DateTime</type>
</CustomField>